# Enigma-DSL

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ENIGMA_DSL_IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  dco.yml
docs/: api-reference.md  blocked-features.md  dialect-improvements.md  dialect-vector-support.md  dsl-completion-dialect-changes.md  extending_build_module.md  tilelang_metal_analysis.md
enigma/: __init__.py  _tracing.py  benchmark.py  core.py  tensor.py  testing.py  tuple.py  typing.py
enigma/compiler/: __init__.py  compiler.py  kernel.py  metal_emitter.py  mlir_emitter.py  preprocessor.py
enigma/ops/: __init__.py  quant.py
enigma/runtime_dispatch/: __init__.py  mlx_interop.py  runtime.py
enigma/runtime_dispatch/swift/: libenigma_runtime.swift
examples/: _test_carry_scope.py  async_copy_gemm.py  atomic_counter_test.py  benchmark_naive_vs_tv.py  benchmark_rmsnorm.py  benchmark_sdpa.py  binary_ternary_math_test.py  control_flow_test.py  conv1d_laplacian.py  conv1d_laplacian_handwritten.metal  gemm_test.py  heat_equation.py  int_ops_test.py  matmul_test.py  mlir_ops_smoke.py  pack_ops_test.py  quad_ops_test.py  qwen_megakernel.py  rmsnorm_enigma.metal  sdpa_enigma.metal  showcase_attention.py  sqrt_test.py  threadgroup_shared_test.py  unary_math_test.py  vector_add.py  vector_add_mlx.py  vector_add_naive.metal  vector_add_tv.py  vector_geom_test.py
examples/_build/: test_k.metal
examples/metal/: add_kernel_tv.metal  heat_equation.metal  rmsnorm_enigma.metal  rmsnorm_handwritten.metal  sdpa_c.metal  sdpa_enigma.metal  sdpa_handwritten.metal  vector_add_float4.metal
scripts/: build_all.sh  build_llvm.sh
tests/: test_control_flow.py  test_dsl_extensions.py  test_gemm_matmul.py  test_layout_algebra.py  test_mlir_dsl_surfaces.py  test_preprocessor.py  test_vector_add.py
tests/metal/: test_gemm_matmul_runtime.py  test_launch_overhead_runtime.py  test_mlir_dsl_surfaces_runtime.py  test_new_features_runtime.py  test_vector_add_runtime.py
tests/portable/: test_async_copy.py  test_control_flow.py  test_dsl_extensions.py  test_layout_algebra.py  test_new_features.py  test_vector_add_compile.py
wheelhouse/: enigma_dsl-0.1.dev35+g03b54f442.d20260510-py3-none-any.whl
