[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "enigma"
version = "0.1.0"
description = "A Python DSL for Apple Metal GPU kernels"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["enigma*"]

[tool.setuptools.package-data]
"enigma.runtime_dispatch.swift" = ["*.swift"]
